Fixed play button visibility

--- a/src/components/main/ProjectSpindr.scss
+++ b/src/components/main/ProjectSpindr.scss
@@ -87,23 +87,14 @@
   box-shadow: 0px 0px 30px 20px base.$bg-color;
   transition: height 0.25s ease;
 }
-.project-spindr .play-button {
+.project-spindr .play-button-container {
   position: absolute;
-  text-align: center;
-  height: 2.5rem;
-  top: 0;
-  left: 25%;
-  right: 25%;
-  padding: 0.5rem;
-  color: white;
+  height: 100%;
+  width: 100%;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
-  font-weight: 500;
-  border-radius: 0rem 0rem 0.5rem 0.5rem;
-  box-shadow: 0px 0px 100px 30px base.$bg-color;
-  pointer-events: none;
 }
 .project-spindr .shot {
   height: 85%;
@@ -126,6 +117,15 @@
   align-items: center;
   border-radius: 0.5rem;
 }
+.project-spindr .play-button {
+  height: 8rem;
+  width: 8rem;
+  background-color: base.$bg-color;
+  border-radius: 50%;
+  box-shadow: 0px 0px 60px 20px base.$bg-color;
+  transition: opacity 1s ease;
+}
+
 .project-spindr .icon {
   height: 100%;
 }
